--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tempsdeparole",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@babel/core": "7.2.2",
     "@material-ui/core": "^3.9.2",
